tests/sumo/extended/vaporizer/errors/begin_not_numeric/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: Attribute 'begin' in definition of a vaporizer is not a valid time value.
Quitting (on error).
